solve: day2 part 1

--- a/day2/Cargo.toml
+++ b/day2/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
-name = "utils"
+name = "day2"
 version = "0.1.0"
-authors = ["Tom Praschan <13141438+tom-anders@users.noreply.github.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex.workspace = true
+aoc_derive.path = '../aoc_derive'
+utils.path = '../utils'
+derive_more.workspace = true
 itertools.workspace = true
+ndarray.workspace = true
+num.workspace = true
 parse-display.workspace = true
 priority-queue.workspace = true
-num.workspace = true
-derive_more.workspace = true
+rayon.workspace = true
+regex.workspace = true
