--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 resolver = "2"
 members = [
     "utils",
-    "aoc_derive", "day1",
+    "aoc_derive", "day1", "day2",
 ]
 
 [workspace.dependencies]
+derive_more = "0.99.17"
 itertools = "0.12.0"
 ndarray = "0.15.6"
 num = "0.4.1"
