--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ num = "0.4.1"
 parse-display = "0.8.2"
 priority-queue = "1.3.2"
 rayon = "1.8.0"
-regex = "1.10.2"
+regex = {version = "1.10.2", features = ["pattern"]}
+lazy-regex = "3.1.0"
