--- a/day4/Cargo.toml
+++ b/day4/Cargo.toml
@@ -12,6 +12,7 @@ derive_more.workspace = true
 itertools.workspace = true
 ndarray.workspace = true
 num.workspace = true
+lazy-regex.workspace = true
 parse-display.workspace = true
 priority-queue.workspace = true
 rayon.workspace = true
