--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ priority-queue = "1.3.2"
 rayon = "1.8.0"
 regex = {version = "1.10.2", features = ["pattern"]}
 lazy-regex = "3.1.0"
+pretty_assertions = "1.4.0"
