--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 members = [
     "utils",
-    "aoc_derive", "day1", "day2", "day3", "day4", "day5", "day6", "day7",
+    "aoc_derive", "day1", "day2", "day3", "day4", "day5", "day6", "day7", "day8",
 ]
 
 [workspace.dependencies]
