feat: generalize BFS to allow floodfill

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -16,3 +16,6 @@ derive_more.workspace = true
 lazy-regex.workspace = true
 
 aoc_derive.path = "../aoc_derive"
+
+[dev-dependencies]
+pretty_assertions.workspace = true
