refactor: move graph vizualization to day 20 main solution

--- a/day20/Cargo.toml
+++ b/day20/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 aoc_derive.path = '../aoc_derive'
 utils.path = '../utils'
 derive_more.workspace = true
+dot-writer.workspace = true
 itertools.workspace = true
 lazy-regex.workspace = true
 ndarray.workspace = true
@@ -19,4 +20,3 @@ num.workspace = true
 
 [dev-dependencies]
 pretty_assertions.workspace = true
-dot-writer="0.1.3"
