--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ rayon = "1.8.0"
 regex = {version = "1.10.2", features = ["pattern"]}
 lazy-regex = "3.1.0"
 pretty_assertions = "1.4.0"
+dot-writer="0.1.3"
